<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.natebeard.project2.MainActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/spinner"
        android:entries="@array/animals"/>

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/spinner"
    android:id="@+id/radio_grid"
    android:layout_marginTop="25dp">

        <TextView
            android:text="@string/radio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_text"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_gravity="center_vertical" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/type_of_animal_radiogroup">

            <RadioButton
                android:text="@string/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:id="@+id/radio1" />

            <RadioButton
                android:text="@string/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:id="@+id/radio2" />

        </RadioGroup>
</GridLayout>

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_grid"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:id="@+id/genderToggleButton"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="true" />

    <Switch
        android:text="@string/wings_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wings_switch"
        android:layout_alignBaseline="@+id/genderToggleButton"
        android:layout_alignBottom="@+id/genderToggleButton"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/generate_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generate_button"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/genderToggleButton"
        android:layout_centerHorizontal="true"
        android:onClick="generatePetAction"/>

    <Button
        android:text="@string/checkout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/checkout_button"
        android:onClick="goToCheckout"
        android:layout_toEndOf="@+id/generate_button" />


</RelativeLayout>
