<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_checkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.natebeard.project2.CheckoutActivity">



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_grid2">

        <TextView
            android:text="@string/radio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:id="@+id/size">

            <RadioButton
                android:text="@string/radio_lap_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_lap_size"
                android:onClick="chooseSize" />


            <RadioButton
                android:text="@string/radio_small_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_small_car"
                android:onClick="chooseSize"/>

        </RadioGroup>
    </GridLayout>

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_grid2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:id="@+id/price" />

    <TextView
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/total" />

    <TextView
        android:text="@string/price_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/price"
        android:layout_alignParentEnd="true"
        android:id="@+id/price_number" />

    <TextView
        android:text="@string/total_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/total"
        android:layout_alignParentEnd="true"
        android:id="@+id/total_price" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/total_price"
        android:layout_marginTop="20dp"
        android:id="@+id/visibility"
        android:visibility="invisible">
        <Button
            android:text="@string/order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/orderButton"
            android:onClick="finalScreen"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:id="@+id/imageView2" />


</RelativeLayout>
